<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header"
        android:orientation="horizontal"
        android:elevation="@dimen/dimen2">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_header_back"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen30"
            android:onClick="back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regisdaf"
            android:layout_gravity="center"
            style="@style/header"
            android:layout_marginLeft="@dimen/dimen25"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen20">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userna"
            android:backgroundTint="@color/separator"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:backgroundTint="@color/separator"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/dimen5"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonum"
            android:backgroundTint="@color/separator"
            android:inputType="phone"
            android:layout_marginTop="@dimen/dimen5"/>
        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk1"
                android:layout_weight="50"
                android:layout_marginLeft="@dimen/dimen25"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk2"
                android:layout_marginRight="@dimen/dimen63"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen5">
            <Spinner
                android:id="@+id/bloodType"
                android:layout_width="@dimen/dimen160"
                android:layout_height="@dimen/dimen40"
                android:entries="@array/bloodtype">
            </Spinner>
            <Spinner
                android:id="@+id/reshus"
                android:layout_width="@dimen/dimen160"
                android:layout_height="@dimen/dimen40"
                android:entries="@array/rhsuslist"
                android:layout_marginLeft="@dimen/dimen35">
            </Spinner>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5"
            android:hint="@string/pass"
            android:backgroundTint="@color/separator"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5"
            android:hint="@string/retpas"
            android:backgroundTint="@color/separator"
            android:inputType="textPassword"/>
        <RadioGroup
            android:id="@+id/human"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perso"
                android:layout_weight="50"
                android:layout_marginLeft="@dimen/dimen25"/>
            <RadioButton
                android:id="@+id/grup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Organi"
                android:layout_marginRight="@dimen/dimen25"/>
        </RadioGroup>
        <Spinner
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen40"
            android:entries="@array/joblist"
            android:layout_marginTop="@dimen/dimen5">
        </Spinner>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/homeadd"
            android:backgroundTint="@color/separator"
            android:layout_marginTop="@dimen/dimen5"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/defaultloca"
            android:backgroundTint="@color/separator"
            android:layout_marginTop="@dimen/dimen5"
            android:drawableRight="@drawable/ic_blood_needed_location"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen5">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angreetermcon"
                style="@style/textViewAbu"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonRegister"
            android:text="@string/btn3"
            android:onClick="register"/>
    </LinearLayout>

</RelativeLayout>