<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verif"
    android:background="@color/bghome"
    android:orientation="vertical">

    <TextView
        style="@style/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/head"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dec1"
        style="@style/textView"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen170"
        android:layout_marginRight="@dimen/dimen20"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dec2"
        style="@style/textView"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen190"
        android:layout_marginRight="@dimen/dimen20"/>

    <TextView
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen210"
        android:layout_marginRight="@dimen/dimen20"
        android:text="@string/dec3"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginTop="@dimen/dimen300"
        android:layout_marginRight="@dimen/dimen20"
        android:onClick="verifyCode"
        android:text="@string/btn4" />

</RelativeLayout>