<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verify_code"
    android:orientation="vertical"
    android:background="@color/bghome">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head2"
        style="@style/textViewHeader2"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen180"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dec4"
        style="@style/textView"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen10"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterverif"
        android:textAlignment="center"
        style="@style/editText"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Register"
        android:text="@string/btn5"
        android:onClick="send"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginLeft="@dimen/dimen20"
        android:layout_marginRight="@dimen/dimen20"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doesn"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resend"
            style="@style/textViewBold14"/>
    </LinearLayout>>

</LinearLayout>