<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user_home">

    <RelativeLayout
        android:id="@+id/header_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen150"
            android:src="@drawable/ic_header_profile"
            android:scaleType="fitXY"/>

        <ImageView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginRight="@dimen/dimen20"
            android:src="@drawable/ic_notification" />

        <ImageView
            android:id="@+id/side_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_side_menu"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_marginLeft="@dimen/dimen20"/>

        <ImageView
            android:layout_width="115dp"
            android:layout_height="107dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="@dimen/dimen80"
            android:background="@drawable/profile" />
        <ImageView
            android:layout_width="@dimen/dimen72"
            android:layout_height="@dimen/dimen72"
            android:layout_marginLeft="@dimen/dimen160"
            android:layout_marginTop="@dimen/dimen100"
            android:src="@drawable/as" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_profile"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Namprof"
            style="@style/textViewNama"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bldtyprof"
            android:textSize="@dimen/font16"
            android:textAlignment="center"/>
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator"
        android:layout_below="@+id/name_profile"
        android:layout_marginTop="@dimen/dimen10"/>

    <LinearLayout
        android:id="@+id/blood_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen15"
        android:layout_marginLeft="@dimen/dimen30"
        android:layout_marginRight="@dimen/dimen30"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numprof1"
                android:textColor="@color/bghome"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bldgvs"
                style="@style/textViewBlood1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numprof2"
                android:textColor="@color/bghome"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bldrece"
                style="@style/textViewBlood1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numprof"
                android:textColor="@color/bghome"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnks"
                style="@style/textViewBlood1"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator"
        android:layout_below="@+id/blood_profile"
        android:layout_marginTop="@dimen/dimen15"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:layout_marginTop="@dimen/dimen15"
        android:layout_marginLeft="@dimen/dimen30"
        android:layout_marginRight="@dimen/dimen30"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="@dimen/dimen100"
                    android:src="@drawable/ic_search_donor"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn6"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decbtn6"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/separator"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen154"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="45dp">
                <ImageView
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="@dimen/dimen100"
                    android:src="@drawable/ic_blood_needed"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn7"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decbtn7"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/separator"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen15">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dimen20">
                <ImageView
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="@dimen/dimen100"
                    android:src="@drawable/ic_message"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn8"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decbtn8"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/separator"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dimen50">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen100"
                    android:src="@drawable/ic_donor_history"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn9"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decbtn9"
                    android:textSize="@dimen/font14"
                    android:textColor="@color/separator"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>