<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bghome"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen20">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_welcome_logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen80"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userna"
            style="@style/editText"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/dimen30"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            style="@style/editText"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/dimen5"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Register"
            android:text="@string/btn1"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            style="@style/textView"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen15"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Register"
            android:text="@string/btn2"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            android:paddingLeft="@dimen/dimen60"
            android:paddingRight="@dimen/dimen50"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regis"
                style="@style/textView"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Register"
                style="@style/textViewBold"
                android:gravity="center"
                android:onClick="register"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>